--- a/Essays/现代学校教育就像苏联经济.md
+++ b/Essays/现代学校教育就像苏联经济.md
@@ -1,3 +1,4 @@
+#! https://zhuanlan.zhihu.com/p/365716946
 # Modern schooling is like Soviet economy 现代学校教育就像苏联经济
 
 # Schooling and communism
@@ -14,7 +15,7 @@ Most people in the industrialized world realize that market economy has many adv
 
 # Incremental enslavement by propaganda
 
-# 宣传的逐步奴役性
+# 通过宣传逐步实现奴役
 
 As a kid, I was enslaved intellectually. I was a communist. I believed school was good and served my development. I have changed since.
 
@@ -22,7 +23,7 @@ As a kid, I was enslaved intellectually. I was a communist. I believed school wa
 
 If you capture a potential slave, he is likely to react violently. However, it is also possible to enslave people incrementally and meet no reaction. Children are enslaved week by week at school. It is like slowly heating up a frog to death. Children gradually conform to an increasing level of discipline and oppression. They can no longer see a way out. They no longer see a problem. They accept the status quo as inevitable. They can also absorb school propaganda as the sole sacred truth.
 
-如果你抓住了一个潜在的奴隶，他很可能会做出激烈的反应。然而，也有可能逐步地奴役人，而不会遇到任何反应。孩子们在学校周而复始地被奴役。这就像慢慢地把一只青蛙加热至死。孩子们逐渐顺应越来越多的纪律和压迫。他们再也看不到出路。他们不再看到问题。他们接受现状是不可避免的。他们也能吸收学校的宣传，作为唯一神圣的真理。
+如果你抓住了一个潜在的奴隶，他很可能会做出激烈的反应。然而，也有可能逐步地奴役人，而不会遇到任何反抗。孩子们在学校周而复始地被奴役。这就像慢慢地把一只青蛙加热至死。孩子们逐渐顺应越来越多的纪律和压迫。他们再也看不到出路。他们不再看到问题。他们接受现状是不可避免的。他们也能吸收学校的宣传，作为唯一神圣的真理。
 
 Communism enslaved my mind by schooling and information monopoly. It was a gradual absorption of ideas based on incomplete information. I became realistic about communism only when [I learned English](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English), and learned about the world beyond Poland (in my mid twenties).
 
@@ -34,7 +35,7 @@ I became realistic about school thanks to [incremental reading](https://supermem
 
 It is possible to enslave people incrementally and meet no opposition
 
-可以渐渐地奴役人，却没有遇到反对的声音。
+可以渐渐地奴役人，并不会遇到反对的声音。
 
 # Are kids bound to stray without schooling?
 
@@ -42,7 +43,7 @@ It is possible to enslave people incrementally and meet no opposition
 
 I tried to quantify the degree of abysmal failure of schooling in expanding my knowledge. Schools were [16-50 times slower](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Growth_of_my_knowledge_of_history) in expanding my own knowledge of history than was my own life free of schooling. In my investigations, I chose the subject of history because history is not part of my job. It is just interesting. Even if you take a correction for the fact that I compare the more mature half of my life with the less mature half, the numbers are still staggering.
 
-我试图量化学校教育在拓展知识方面的糟糕失败程度。学校在拓展自己的历史知识方面，比我自己没有学校教育的生活要慢 16-50 倍。在我的调查中，我选择了历史学科，因为历史不是我工作的一部分。它只是有趣。即使你把我比较成熟的半生和不太成熟的半生做一个修正，这个数字也是惊人的。
+我试图量化学校教育在拓展知识方面的糟糕失败程度。学校在拓展自己的历史知识方面，比我自己没有学校教育的生活要慢 16-50 倍。在我的调查中，我选择了历史学科，因为历史不是我工作的一部分。它只是有趣。即使你把我比较成熟的半辈子和不太成熟的半辈子做一个修正，这个数字也是惊人的。
 
 When I say kids should decide their own learning direction, I keep hearing of those stray kids that may play video games all day, spend their days on collecting baseball cards, or study UFOs and aliens. [Sudbury Valley School](https://supermemo.guru/wiki/Sudbury_Valley_School) proves that prediction to be wrong.
 
@@ -126,7 +127,7 @@ Someone can question my Soviet economy metaphor saying that kids have immature b
 
 I would say the opposite is true. It is the kid who has been designed by millions of years of evolution to be a mathematically optimized [perfect learning machine](https://supermemo.guru/wiki/Learn_drive). They have an innate program for optimally structuring the semantic network of knowledge in their brains. I mention elsewhere that a kid is also a [perfectly forgetting machine](https://supermemo.guru/wiki/Childhood_amnesia). I need to add that forgetting is a vital component of the neural generalization and abstraction program that is part of that perfect learning machine. This makes for a system that is smarter than your best AI learning machines yet. This biological system can get you from a blob of living matter to an intelligent human robot that takes on goals and zeros in on its target along an efficient trajectory. In terms of decision-making, what happens automatically in a baby brain is more efficient than what happens in a thinking brain of an entrepreneur. This is because the automatic and autonomous control of the [learn drive](https://supermemo.guru/wiki/Learn_drive) emergent in neural networks is more suited for detecting quality learnable knowledge than the "rational" control employed by a businessman in his market analysis. The latter needs to work under the constraints of imperfect knowledge and set targets, independent of how realistic they are. Kids are free from this constraint and will soak in new knowledge at optimum speed set by the capacity of their brain and their experiential exposure. Their brains automatically detect quality.
 
-我想说的是，事实恰恰相反。是孩子被数百万年的进化设计成了一个数学优化的完美学习机器。他们有一个与生俱来的程序来优化大脑中的知识语义网络结构。我在其他地方提到，一个孩子也是一个完美的遗忘机器。我需要补充的是，遗忘是神经概括和抽象程序的重要组成部分，而神经概括和抽象程序是那台完美学习机器的一部分。这使得这个系统比你最好的人工智能学习机还聪明。这个生物系统可以让你从一个生物物质的小球变成一个智能的人类机器人，沿着高效的轨迹接受目标并锁定目标。在决策方面，婴儿大脑中自动发生的事情比企业家的思维大脑中发生的事情更有效率。这是因为神经网络中出现的学习驱动的自动和自主控制，比商人在市场分析中采用的 "理性 "控制更适合检测高质量的可学习知识。后者需要在不完全知识的约束下工作，并设定目标，与目标的现实性无关。孩子们则不受这种约束，他们会以大脑容量和经验接触所设定的最佳速度吸收新知识。他们的大脑会自动检测质量。
+我想说的是，事实恰恰相反。是孩子被数百万年的进化设计成了一个数学优化的完美学习机器。他们有一个与生俱来的程序来优化大脑中的知识语义网络结构。我在其他地方提到，一个孩子也是一个完美的遗忘机器。我需要补充的是，遗忘是神经泛化和抽象程序的重要组成部分，而神经泛化和抽象程序是那台完美学习机器的一部分。这使得这个系统比你最好的人工智能学习机还聪明。这个生物系统可以让你从一个生物物质的小球变成一个智能的人类机器人，沿着高效的轨迹接受目标并锁定目标。在决策方面，婴儿大脑中自动发生的事情比企业家的思维大脑中发生的事情更有效率。这是因为神经网络中出现的学习驱动的自动和自主控制，比商人在市场分析中采用的 "理性" 控制更适合检测高质量的可学习知识。后者需要在不完全知识的约束下工作，并设定目标，与目标的现实性无关。孩子们则不受这种约束，他们会以大脑容量和经验接触所设定的最佳速度吸收新知识。他们的大脑会自动检测质量。
 
 Kids will learn to walk even if we disrupt their efforts with various accelerations efforts (e.g. walking machines that interfere with the natural motor skill development program). Kids will learn to speak on their own. No targeted tutoring needed. All they need is speech on input and the drive to accomplish goals via speech communication. Check your two neighbors, one is going out of his way to make his kid speak fast, and count fast, and perhaps read early. The other does nothing and his kid can still surprise and win that developmental race. Smart kids may develop slowly. On the other hand, accelerated kids can slow down due to the interference with their natural learning program. The problem with inept acceleration is that it may leave a permanent mark on the ultimate outcome.
 
@@ -146,7 +147,7 @@ Schooling and centrally-governed economies use a similar inefficient control sys
 
 Ken Robinson is one of the briskiest minds involved in the criticism of current educational models. He proposed a better metaphor of schooling. Instead of control theory, he evoked optimization strategies. Schooling goes for high volumes at low costs. The same happens in food industry. The harm done by industrialization of schooling is not yet fully understood, however, we all know the health harm caused by the fast food industry. For fast food metaphor of schooling see: [Ken Robinson's "Bring on the learning revolution!"](https://supermemo.guru/wiki/Schools_do_not_tolerate_diversity) on YouTube.
 
-肯-罗宾逊是参与批评现行教育模式的最粗犷的头脑之一。他提出了一个更好的学校教育比喻。他引出的不是控制理论，而是优化策略。学校教育追求的是低成本大批量。食品工业也是如此。学校教育产业化所带来的危害还没有完全了解，然而，我们都知道快餐业对健康的危害。关于快餐对学校教育的比喻，请参见：肯-罗宾逊的 "带来学习革命！"在YouTube上。
+肯-罗宾逊是参与批评现行教育模式的最粗犷的头脑之一。他提出了一个更好的学校教育比喻。他引出的不是控制理论，而是优化策略。学校教育追求的是低成本大批量。食品工业也是如此。学校教育产业化所带来的危害还没有完全了解，然而，我们都知道快餐业对健康的危害。关于快餐对学校教育的比喻，请参见：肯-罗宾逊的 "带来学习革命！"在 YouTube 上。
 
 Robinson says:
 
@@ -156,7 +157,7 @@ Robinson says:
 >
 > 
 >
-> 我们必须从本质上的工业教育模式中走出来 一个基于线性和一致性以及批量化的制造模式。我们必须转向一种更基于农业原则的模式。我们必须认识到，人类的繁荣不是一个机械的过程，而是一个有机的过程。而且你无法预测人类发展的结果。你所能做的，就像一个农民一样，就是创造条件，让他们开始繁荣。
+> 我们必须从本质上的工业教育模式中走出来 一个基于线性和一致性以及批量化的制造模式。我们必须转向一种更基于农业原则的模式。我们必须认识到，人的成长不是一个机械的过程，而是一个有机的过程。而且你无法预测人发展的结果。你所能做的，就像一个农民一样，就是创造条件，让他们开始蓬勃发展。
 
 ## Finnish paradox
 
@@ -164,7 +165,7 @@ Robinson says:
 
 [Compulsory schooling must end](https://supermemo.guru/wiki/Compulsory_schooling_must_end). This should be obvious with a bit of understanding of the theory of learning. However, the entire western world seems to be trying to optimize a wrong design. In [Finnish paradox](https://supermemo.guru/wiki/Finnish_paradox), I show how Finnish schools lead the world in being open to new ideas. However, they also may keep optimizing the dead end of school that is not fully committed to [free learning](https://supermemo.guru/wiki/Free_learning). In that sense, Finland is a bit like Soviet Union 1957. Everyone was in awe with Sputnik. Many people had doubts about the superiority of free markets over the command economy. However, the proletariat of the communist empire did not fully subscribe to the ideology. Many people in the East could see the richest of the West and wondered why they cannot freely vote for parties that might perhaps change a thing or two. Many students can perfectly see the harm of coercion, but they have no vote. Parents, teachers and politicians are too busy with their lives and do not fully appreciate the pain of schooling. They live with the myth that "school is good". Finnish students are obedient and compliant. This is reminiscent to the well-indoctrinated population (I was one of those compliant souls: [I stopped being a patriot](https://supermemo.guru/wiki/I_stopped_being_a_patriot)). As much as we needed Lech Walesa and other rebels, we need now young rebels who would help change the school system. It will be hard to find such rebels in Finland. Finnish system is too good. I bet on Eastern Europe (perhaps Poland?). Our students are smart, rebellious, unhappy, and the system is almost as bad as the Soviet Union in the days leading to its collapse.
 
-义务教育必须结束。只要对学习理论稍有了解，这应该是显而易见的。然而，整个西方世界似乎都在试图优化一个错误的设计。在《芬兰悖论》中，我展示了芬兰学校如何引领世界对新思想的开放。然而，他们也可能不断优化没有完全致力于自由学习的学校死角。在这个意义上，芬兰有点像 1957 年的苏联。每个人都对斯普特尼克心存敬畏。很多人对自由市场比命令经济的优越性产生了怀疑。然而，共产主义帝国的无产阶级并不完全认同这种意识形态。许多东方人可以看到西方最富有的人，他们想知道为什么他们不能自由地投票给那些或许可以改变一两件事情的政党。很多学生完全可以看到强制的危害，但他们没有投票权。家长、老师和政治家们忙于生活，并没有完全体会到学校教育的痛苦。他们生活在 "学校好"的神话中。芬兰的学生很听话，很顺从。这让人联想到那些受到良好教育的民众（我就是那些顺从的灵魂之一：我不再是一个爱国者）。就像我们需要莱赫-瓦文萨和其他反叛者一样，我们现在也需要年轻的反叛者，他们会帮助改变学校制度。在芬兰很难找到这样的叛逆者。芬兰的制度太好。我把赌注押在东欧（也许是波兰？我们的学生聪明、叛逆、不快乐，而且这个制度几乎和苏联崩溃前的日子一样糟糕。
+义务教育必须结束。只要对学习理论稍有了解，这应该是显而易见的。然而，整个西方世界似乎都在试图优化一个错误的设计。在《芬兰悖论》中，我展示了芬兰学校如何引领世界对新思想的开放。然而，他们也可能不断优化没有完全致力于自由学习的学校死角。在这个意义上，芬兰有点像 1957 年的苏联。每个人都对斯普特尼克心存敬畏。很多人对自由市场比命令经济的优越性产生了怀疑。然而，共产主义帝国的无产阶级并不完全认同这种意识形态。许多东方人可以看到西方最富有的人，他们想知道为什么他们不能自由地投票给那些或许可以改变一两件事情的政党。很多学生完全可以看到强制的危害，但他们没有投票权。家长、老师和政治家们忙于生活，并没有完全体会到学校教育的痛苦。他们生活在 "学校好" 的神话中。芬兰的学生很听话，很顺从。这让人联想到那些受到良好教育的民众（我就是那些顺从的灵魂之一：我不再是一个爱国者）。就像我们需要莱赫-瓦文萨和其他反叛者一样，我们现在也需要年轻的反叛者，他们会帮助改变学校制度。在芬兰很难找到这样的叛逆者。芬兰的制度太好。我把赌注押在东欧（也许是波兰？我们的学生聪明、叛逆、不快乐，而且这个制度几乎和苏联崩溃前的日子一样糟糕。
 
 Compulsory schooling may need a bloodless rebellion for its complete eradication
 
@@ -188,7 +189,7 @@ In the [optimum education system](https://supermemo.guru/wiki/Reform), all learn
 
 Bad employment of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) might suppress the [learn drive](https://supermemo.guru/wiki/Learn_drive)!
 
-糟糕的SuperMemo使用可能会压制学习动力！
+糟糕的 SuperMemo 使用可能会压制学习动力！
 
 # Further reading
 
